--- a/notebooks/01_data_understanding.ipynb
+++ b/notebooks/01_data_understanding.ipynb
@@ -1,100 +1,153 @@
-# 3. Импорт библиотек
-import pandas as pd
-import numpy as np
-import matplotlib.pyplot as plt
-import seaborn as sns
-from datetime import datetime
-import re
-from collections import Counter
-
-# 4. Загрузка данных
-# df = pd.read_csv('movie_database.csv')
-# print(f"Размер датасета: {df.shape}")
-# print(f"Колонки: {df.columns.tolist()}")
-
-# Пересборка в ipynb формат
-
-# 1. Постановка задачи
-"""
-**1. Постановка задачи**
-
-Собрана база данных кино. В базе присутствуют столбцы с id, названия, дату релиза, описание, показы, средняя оценка, количество оценок и наличие видео. Всего собрано 9472 записи.
-
-**Основные студии в датасете:**
-- Walt Disney Company
-- Базелевс
-- Yellow, Black and White Group
-- Paramount Pictures
-- Кинокомпания СТВ
-
-**Цели анализа:**
-1. Выявить среднюю разницу оценки первой и последующих частей фильмов
-2. Определить, какие слова чаще встречаются в описании фильмов с высокой оценкой
-3. Найти наиболее удачные года кинопроката
-4. Обнаружить закономерности дат выпуска относительно среднего успеха фильмов
-
-Данная обработка полезна для:
-- Понимания динамики успешности кинофраншиз
-- Оптимизации контент-стратегии (ключевые слова для успешных фильмов)
-- Планирования релизов и производства
-"""
-
-# 2. Паспорт датасета (Data Understanding)
-"""
-**2. Паспорт датасета (Data Understanding)**
-
-**Общая информация:**
-- Объем датасета: 9472 записи
-- Период: вероятно, современные фильмы (нужно уточнить по данным)
-- Источник: агрегированные данные о фильмах
-
-**Структура данных (предполагаемые столбцы):**
-
-1. **id** - уникальный идентификатор фильма
-   - Тип: int/string
-   - Назначение: первичный ключ
-
-2. **title** - название фильма
-   - Тип: string
-   - Особенности: возможны дубли для ремейков
-
-3. **release_date** - дата релиза
-   - Тип: datetime
-   - Важно: преобразовать для временного анализа
-
-4. **description** - описание фильма
-   - Тип: string (текст)
-   - Для NLP анализа
-
-5. **views** - количество показов/просмотров
-   - Тип: numeric
-   - Показатель популярности
-
-6. **average_rating** - средняя оценка
-   - Тип: float (0-10 или 0-5)
-   - Основной целевой показатель качества
-
-7. **rating_count** - количество оценок
-   - Тип: integer
-   - Показатель репрезентативности оценки
-
-8. **has_video** - наличие видео
-   - Тип: boolean
-   - Возможный индикатор полноты данных
-
-**География:**
-- Международные и российские студии
-- Преимущественно коммерческое кино
-
-**Потенциальные проблемы данных:**
-1. Пропуски в описаниях
-2. Разные системы оценок (нужна стандартизация)
-3. Дубликаты фильмов (разные релизы)
-4. Выбросы в показах/оценках
-5. Несбалансированность по студиям
-
-**Метрики для анализа:**
-- Качество: средний рейтинг
-- Популярность: количество показов/оценок
-- Коммерческий успех: производные метрики
-"""
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Анализ базы данных кино\n",
+    "\n",
+    "## 1. Постановка задачи\n",
+    "\n",
+    "Собрана база данных кино. В базе присутствуют столбцы с id, названия, дату релиза, описание, показы, средняя оценка, количество оценок и наличие видео. Всего собрано 9472 записи.\n",
+    "\n",
+    "**Основные студии в датасете:**\n",
+    "- Walt Disney Company\n",
+    "- Базелевс\n",
+    "- Yellow, Black and White Group\n",
+    "- Paramount Pictures\n",
+    "- Кинокомпания СТВ\n",
+    "\n",
+    "**Цели анализа:**\n",
+    "1. Выявить среднюю разницу оценки первой и последующих частей фильмов\n",
+    "2. Определить, какие слова чаще встречаются в описании фильмов с высокой оценкой\n",
+    "3. Найти наиболее удачные года кинопроката\n",
+    "4. Обнаружить закономерности дат выпуска относительно среднего успеха фильмов\n",
+    "\n",
+    "Данная обработка полезна для:\n",
+    "- Понимания динамики успешности кинофраншиз\n",
+    "- Оптимизации контент-стратегии (ключевые слова для успешных фильмов)\n",
+    "- Планирования релизов и производства"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Паспорт датасета (Data Understanding)\n",
+    "\n",
+    "**Общая информация:**\n",
+    "- Объем датасета: 9472 записи\n",
+    "- Период: вероятно, современные фильмы (нужно уточнить по данным)\n",
+    "- Источник: агрегированные данные о фильмах\n",
+    "\n",
+    "**Структура данных (предполагаемые столбцы):**\n",
+    "\n",
+    "1. **id** - уникальный идентификатор фильма\n",
+    "   - Тип: int/string\n",
+    "   - Назначение: первичный ключ\n",
+    "\n",
+    "2. **title** - название фильма\n",
+    "   - Тип: string\n",
+    "   - Особенности: возможны дубли для ремейков\n",
+    "\n",
+    "3. **release_date** - дата релиза\n",
+    "   - Тип: datetime\n",
+    "   - Важно: преобразовать для временного анализа\n",
+    "\n",
+    "4. **description** - описание фильма\n",
+    "   - Тип: string (текст)\n",
+    "   - Для NLP анализа\n",
+    "\n",
+    "5. **views** - количество показов/просмотров\n",
+    "   - Тип: numeric\n",
+    "   - Показатель популярности\n",
+    "\n",
+    "6. **average_rating** - средняя оценка\n",
+    "   - Тип: float (0-10 или 0-5)\n",
+    "   - Основной целевой показатель качества\n",
+    "\n",
+    "7. **rating_count** - количество оценок\n",
+    "   - Тип: integer\n",
+    "   - Показатель репрезентативности оценки\n",
+    "\n",
+    "8. **has_video** - наличие видео\n",
+    "   - Тип: boolean\n",
+    "   - Возможный индикатор полноты данных\n",
+    "\n",
+    "**География:**\n",
+    "- Международные и российские студии\n",
+    "- Преимущественно коммерческое кино\n",
+    "\n",
+    "**Потенциальные проблемы данных:**\n",
+    "1. Пропуски в описаниях\n",
+    "2. Разные системы оценок (нужна стандартизация)\n",
+    "3. Дубликаты фильмов (разные релизы)\n",
+    "4. Выбросы в показах/оценках\n",
+    "5. Несбалансированность по студиям\n",
+    "\n",
+    "**Метрики для анализа:**\n",
+    "- Качество: средний рейтинг\n",
+    "- Популярность: количество показов/оценок\n",
+    "- Коммерческий успех: производные метрики"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. Импорт библиотек\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from datetime import datetime\n",
+    "import re\n",
+    "from collections import Counter\n",
+    "\n",
+    "# Установка стилей\n",
+    "plt.style.use('seaborn-v0_8-darkgrid')\n",
+    "sns.set_palette(\"husl\")\n",
+    "%matplotlib inline\n",
+    "\n",
+    "print(\"Библиотеки успешно импортированы\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. Загрузка данных (пример кода)\n",
+    "# Раскомментируйте и адаптируйте под ваш файл:\n",
+    "# df = pd.read_csv('movie_database.csv')\n",
+    "# print(f\"Размер датасета: {df.shape}\")\n",
+    "# print(f\"Колонки: {df.columns.tolist()}\")\n",
+    "# df.head()"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
