--- a/notebooks/01_data_understanding.ipynb
+++ b/notebooks/01_data_understanding.ipynb
@@ -113,20 +113,27 @@
     "\n",
     "print(\"Библиотеки успешно импортированы\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 4. Загрузка данных (пример кода)\n",
-    "# Раскомментируйте и адаптируйте под ваш файл:\n",
-    "# df = pd.read_csv('movie_database.csv')\n",
-    "# print(f\"Размер датасета: {df.shape}\")\n",
-    "# print(f\"Колонки: {df.columns.tolist()}\")\n",
-    "# df.head()"
-   ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
