--- a/notebooks/01_data_understanding.ipynb
+++ b/notebooks/01_data_understanding.ipynb
@@ -30,19 +30,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3. Импорт библиотек\n",
+    "# 2. Паспорт датасета (Data Understanding)\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from datetime import datetime\n",
-    "import re\n",
-    "from collections import Counter\n",
-    "\n",
-    "# Установка стилей\n",
-    "plt.style.use('seaborn-v0_8-darkgrid')\n",
-    "sns.set_palette(\"husl\")\n",
-    "%matplotlib inline\n",
+    "df = pd.read_csv('dataset/Movie-Dataset-Latest.csv')\n",
+    "print("Размерность (строк, столбцов): ", df.shape)\n",
+    "print("Типы всех столлбцов: ", df.dtypes)\n",
     "\n",
     "print(\"Библиотеки успешно импортированы\")"
    ]
@@ -53,7 +45,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4. Загрузка данных (пример кода)\n",
+    "# 3. Загрузка данных (пример кода)\n",
     "# Раскомментируйте и адаптируйте под ваш файл:\n",
     "# df = pd.read_csv('movie_database.csv')\n",
     "# print(f\"Размер датасета: {df.shape}\")\n",
