--- a/notebooks/01_data_understanding.ipynb
+++ b/notebooks/01_data_understanding.ipynb
@@ -31,6 +31,10 @@
    "outputs": [],
    "source": [
      "# 2. Паспорт датасета (Data Understanding)\n"
+     "import pandas as pd\n"
+     "df = pd.read_csv('../dataset/Movie-Dataset-Latest.csv')\n"
+     "print("Размерность (строк, столбцов): ", df.shape)\n"
+     "print("Типы всех столлбцов: ", df.dtypes)"
    ]
   },
   {
