--- a/notebooks/01_data_understanding.ipynb
+++ b/notebooks/01_data_understanding.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## 1. Постановка задачи\n",
     "\n",
-    "Собрана база данных кино. В базе присутствуют столбцы с id, названия, дату релиза, описание, показы, средняя оценка, количество оценок и наличие видео. Всего собрано 9472 записи.\n",
+    "Собрана база данных кино. В базе присутствуют столбцы с id, названия, дату релиза, описание, показы, средняя оценка, количество оценок и наличие видео. Всего собрано 9463 записи.\n",
     "\n",
     "**Студии, которые могут стать заказчиками анализа:**\n",
     "- Walt Disney Company\n",
@@ -45,7 +45,7 @@
    "source": [
     "# 3. Загрузка данных (пример кода)\n",
     "# Раскомментируйте и адаптируйте под ваш файл:\n",
-    "# df = pd.read_csv('movie_database.csv')\n",
+    "# df = pd.read_csv('Movie-Dataset-Latest.csv')\n",
     "# print(f\"Размер датасета: {df.shape}\")\n",
     "# print(f\"Колонки: {df.columns.tolist()}\")\n",
     "# df.head()"
