--- a/notebooks/01_data_understanding.ipynb
+++ b/notebooks/01_data_understanding.ipynb
@@ -33,8 +33,8 @@
      "# 2. Паспорт датасета (Data Understanding)\n"
      "import pandas as pd\n"
      "df = pd.read_csv('../dataset/Movie-Dataset-Latest.csv')\n"
-     "print("Размерность (строк, столбцов): ", df.shape)\n"
-     "print("Типы всех столлбцов: ", df.dtypes)"
+     "print('Размерность (строк, столбцов): ', df.shape)\n"
+     "print('Типы всех столлбцов: ', df.dtypes)"
    ]
   },
   {
