--- a/notebooks/01_data_understanding.ipynb
+++ b/notebooks/01_data_understanding.ipynb
@@ -30,10 +30,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-     "# 2. Паспорт датасета (Data Understanding)\n"
-     "import pandas as pd\n"
-     "df = pd.read_csv('../dataset/Movie-Dataset-Latest.csv')\n"
-     "print('Размерность (строк, столбцов): ', df.shape)\n"
+     "# 2. Паспорт датасета (Data Understanding)\n",
+     "import pandas as pd\n",
+     "df = pd.read_csv('../dataset/Movie-Dataset-Latest.csv')\n",
+     "print('Размерность (строк, столбцов): ', df.shape)\n",
      "print('Типы всех столлбцов: ', df.dtypes)"
    ]
   },
@@ -46,8 +46,8 @@
     "# 3. Загрузка данных (пример кода)\n",
     "# Раскомментируйте и адаптируйте под ваш файл:\n",
     "# df = pd.read_csv('Movie-Dataset-Latest.csv')\n",
-    "# print(f\"Размер датасета: {df.shape}\")\n",
-    "# print(f\"Колонки: {df.columns.tolist()}\")\n",
+    "# print(f\'Размер датасета: {df.shape}\')\n",
+    "# print(f\'Колонки: {df.columns.tolist()}\')\n",
     "# df.head()"
    ]
   }
