--- a/notebooks/01_data_understanding.ipynb
+++ b/notebooks/01_data_understanding.ipynb
@@ -23,7 +23,7 @@
     "3. Найти наиболее удачные года кинопроката\n",
     "4. Обнаружить закономерности дат выпуска относительно среднего успеха фильмов"
    ]
-  }
+  },
   {
    "cell_type": "code",
    "execution_count": null,
@@ -32,11 +32,11 @@
    "source": [
     "# 2. Паспорт датасета (Data Understanding)\n",
     "import pandas as pd\n",
-    "df = pd.read_csv('../dataset/Movie-Dataset-Latest.csv')\n",
+    "df = pd.read_csv('dataset/Movie-Dataset-Latest.csv')\n",
     "print('Размерность (строк, столбцов): ', df.shape)\n",
     "print('Типы всех столлбцов: ', df.dtypes)"
    ]
-  }
+  },
   {
    "cell_type": "code",
    "execution_count": null,
