--- a/notebooks/01_data_understanding.ipynb
+++ b/notebooks/01_data_understanding.ipynb
@@ -34,7 +34,7 @@
     "import pandas as pd\n",
     "df = pd.read_csv('dataset/Movie-Dataset-Latest.csv')\n",
     "print('Размерность (строк, столбцов): ', df.shape)\n",
-    "print('Типы всех столлбцов: ', df.dtypes)"
+    "print('Типы всех столлбцов: ', df.dtypes.to_numpy)"
    ]
   }
  ],
