--- a/notebooks/01_data_understanding.ipynb
+++ b/notebooks/01_data_understanding.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Анализ базы данных кино\n",
     "\n",
@@ -27,14 +26,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# 2. Паспорт датасета (Data Understanding)\n",
     "import pandas as pd\n",
     "df = pd.read_csv('dataset/Movie-Dataset-Latest.csv')\n",
     "print('Размерность (строк, столбцов): ', df.shape)\n",
-    "print('Типы всех столлбцов: ', df.dtypes.to_numpy)"
+    "print('Типы всех столлбцов: ')\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "# 3. Аудит качества данных\n",
+    "df.info()"
    ]
   }
  ],
