--- a/notebooks/01_data_understanding.ipynb
+++ b/notebooks/01_data_understanding.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Собрана база данных кино. В базе присутствуют столбцы с id, названия, дату релиза, описание, показы, средняя оценка, количество оценок и наличие видео. Всего собрано 9463 записи.\n",
     "\n",
-    "**Студии, которые могут стать заказчиками анализа:**\n",
+    "Студии, которые могут стать заказчиками анализа:\n",
     "- Walt Disney Company\n",
     "- Базелевс\n",
     "- Yellow, Black and White Group\n",
@@ -29,7 +29,7 @@
    "source": [
     "# 2. Паспорт датасета (Data Understanding)\n",
     "import pandas as pd\n",
-    "df = pd.read_csv('dataset/Movie-Dataset-Latest.csv')\n",
+    "df = pd.read_csv('../dataset/Movie-Dataset-Latest.csv')\n",
     "print('Размерность (строк, столбцов): ', df.shape)\n",
     "print('Типы всех столлбцов: ')\n",
     "df.info()"
