--- a/notebooks/01_data_understanding.ipynb
+++ b/notebooks/01_data_understanding.ipynb
@@ -28,9 +28,16 @@
    "execution_count": null,
    "source": [
     "# 2. Паспорт датасета (Data Understanding)\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('../dataset/Movie-Dataset-Latest.csv')\n",
+    "\n",
+    "print('Размерность (строк, столбцов): ', df.shape)\n",
+    "print('Типы всех столлбцов: ')\n",
+    "df.info()"
    ]
   }
- ],
+ ]
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
