--- a/notebooks/notebooks/01_data_understanding.ipynb
+++ b/notebooks/notebooks/01_data_understanding.ipynb
@@ -1,5 +1,14 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Заголовок\n",
+    "Текст с **жирным** шрифтом."
+   ]
+  }
+ ],
  "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 5
