--- a/notebooks/notebooks/01_data_understanding.ipynb
+++ b/notebooks/notebooks/01_data_understanding.ipynb
@@ -7,6 +7,15 @@
     "# Заголовок\n",
     "Текст с **жирным** шрифтом."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('Hello World')"
+   ]
   }
  ],
  "metadata": {},
