--- a/notebooks/notebooks/01_data_understanding.ipynb
+++ b/notebooks/notebooks/01_data_understanding.ipynb
@@ -28,7 +28,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('Hello World')"
+    "# 2. Паспорт датасета (Data Understanding)\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv('../dataset/Movie-Dataset-Latest.csv')\n",
+    "\n",
+    "print('Размерность (строк, столбцов): ', df.shape)\n",
+    "print('Типы всех столлбцов: ')\n",
+    "df.info()"
    ]
   }
  ],
