--- a/notebooks/01_data_understanding.ipynb
+++ b/notebooks/01_data_understanding.ipynb
@@ -45,7 +45,11 @@
    "outputs": [],
    "source": [
     "# 3. Аудит качества данных\n",
+    "print('Сумма всех пропусков:')\n",
     "df.isnull().sum()\n",
+    "print('Процентное соотношение всех пропусков: всех пропусков:')\n",
+    "(df.isnull().sum() / len(df) * 100).round(2)\n"
+    "print('')\n",
     "\n",
     ""
    ]
