--- a/notebooks/01_data_understanding.ipynb
+++ b/notebooks/01_data_understanding.ipynb
@@ -49,9 +49,7 @@
     "df.isnull().sum()\n",
     "print('Процентное соотношение всех пропусков: всех пропусков:')\n",
     "(df.isnull().sum() / len(df) * 100).round(2)\n"
-    "print('')\n",
-    "\n",
-    ""
+    "print('')"
    ]
   }
  ],
