--- a/notebooks/01_data_understanding.ipynb
+++ b/notebooks/01_data_understanding.ipynb
@@ -35,7 +35,12 @@
     "\n",
     "print('Размерность (строк, столбцов): ', df.shape)\n",
     "print('Типы всех столлбцов:')\n",
-    "df.info()"
+    "df.info()\n",
+    "# 3. Аудит качества данных\n",
+    "print('Кол-во пустых значений')\n",
+    "df.isnull().sum()\n",
+    "print("Процент пустых значений от общего числа")\n",
+    "(df.isnull().mean() * 100)"
    ]
   }
  ],
