--- a/notebooks/01_data_understanding.ipynb
+++ b/notebooks/01_data_understanding.ipynb
@@ -30,16 +30,14 @@
    "source": [
     "# 2. Паспорт датасета (Data Understanding)\n",
     "import pandas as pd\n",
-    "",
     "df = pd.read_csv('../dataset/Movie-Dataset-Latest.csv')\n",
-    "",
     "print('Размерность (строк, столбцов): ', df.shape)\n",
     "print('Типы всех столлбцов:')\n",
     "df.info()\n",
     "# 3. Аудит качества данных\n",
     "print('Кол-во пустых значений')\n",
     "df.isnull().sum()\n",
-    "print("Процент пустых значений от общего числа")\n",
+    "print('Процент пустых значений от общего числа')\n",
     "(df.isnull().mean() * 100)"
    ]
   }
