--- a/notebooks/01_data_understanding.ipynb
+++ b/notebooks/01_data_understanding.ipynb
@@ -15,6 +15,29 @@
   },
   "cells": [
     {
+     "cell_type": "markdown",
+     "source": [
+      "# Анализ базы данных кино\n",
+      "\n",
+      "## 1. Постановка задачи\n",
+      "\n",
+      "Собрана база данных кино. В базе присутствуют столбцы с id, названия, дату релиза, описание, показы, средняя оценка, количество оценок и наличие видео. Всего собрано 9463 записи.\n",
+      "\n",
+      "Студии, которые могут стать заказчиками анализа:\n",
+      "- Walt Disney Company\n",
+      "- Базелевс\n",
+      "- Yellow, Black and White Group\n",
+      "- Paramount Pictures\n",
+      "- Кинокомпания СТВ\n",
+      "\n",
+      "**Цели анализа:**\n",
+      "1. Выявить среднюю разницу оценки первой и последующих частей фильмов\n",
+      "2. Определить, какие слова чаще встречаются в описании фильмов с высокой оценкой\n",
+      "3. Найти наиболее удачные года кинопроката\n",
+      "4. Обнаружить закономерности дат выпуска относительно среднего успеха фильмов"
+     ]
+    },
+    {
       "cell_type": "code",
       "execution_count": 2,
       "metadata": {
