--- a/notebooks/01_data_understanding.ipynb
+++ b/notebooks/01_data_understanding.ipynb
@@ -59,7 +59,7 @@
       "cell_type": "code",
       "source": [
         "# 2. Паспорт датасета (Data Understanding)\\n\",\n",
-        "df = pd.read_csv('sample_data/Movie-Dataset-Latest.csv')\n",
+        "df = pd.read_csv('./data/Movie-Dataset-Latest.csv')\n",
         "print('Размерность (строк, столбцов): ', df.shape)\n",
         "\n",
         "print('Типы всех столлбцов:')\n",
