--- a/notebooks/01_data_understanding.ipynb
+++ b/notebooks/01_data_understanding.ipynb
@@ -439,7 +439,7 @@
         "plt.ylabel('Количество фильмов')\n",
         "plt.show()\n",
         "print('')\n",
-        "print('Видно, что больше всего было фильмов было в 2017 году. Более того, со временем количество фильмов увеличивалось. Рост в 2000 и 1980 имеет разницу в ~4 раза, а 2020 с 2000 в ~3. Возможно через 20 лет фильмы увеличаться в 2 раза. В 2020 году произошла эпидемия и количество фильмов резко снизилось. Как их снимали?')\n",
+        "print('Видно, что больше всего было фильмов было в 2017 году. Более того, со временем количество фильмов увеличивалось. Рост в 2000 и 1980 имеет разницу в ~4 раза, а 2020 по сравнению с 2000 в ~3. Возможно через 20 лет фильмы увеличаться в 2 раза. В 2020 году произошла эпидемия и количество фильмов резко снизилось. Как их снимали?')\n",
         "print('')\n",
         "\n",
         "print('KDE график средних оценок фильмов')\n",
@@ -505,7 +505,7 @@
           "name": "stdout",
           "text": [
             "\n",
-            "Видно, что больше всего было фильмов было в 2017 году. Более того, со временем количество фильмов увеличивалось. Рост в 2000 и 1980 имеет разницу в ~4 раза, а 2020 с 2000 в ~3. Возможно через 20 лет фильмы увеличаться в 2 раза. В 2020 году произошла эпидемия и количество фильмов резко снизилось. Как их снимали?\n",
+            "Видно, что больше всего было фильмов было в 2017 году. Более того, со временем количество фильмов увеличивалось. Рост в 2000 и 1980 имеет разницу в ~4 раза, а 2020 по сравнению с 2000 в ~3. Возможно через 20 лет фильмы увеличаться в 2 раза. В 2020 году произошла эпидемия и количество фильмов резко снизилось. Как их снимали?\n",
             "\n",
             "KDE график средних оценок фильмов\n"
           ]
