--- a/notebooks/01_1_data_understanding.ipynb
+++ b/notebooks/01_1_data_understanding.ipynb
@@ -508,7 +508,7 @@
         "plt.title('Плотность распределения оценок')\n",
         "plt.show()\n",
         "\n",
-        "print('Но, как видно, это приведёт к тому, что палст значений от с большим количеством оценок будут упущены. Пользователь может прийти к выводу, что таких значений нет, что  окажется недействительным')"
+        "print('Но, как видно, это приведёт к тому, что пласт значений с большим количеством оценок будут упущены. Пользователь может прийти к выводу, что таких значений нет, что  окажется недействительным')"
       ],
       "metadata": {
         "colab": {
@@ -558,7 +558,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Но, как видно, это приведёт к тому, что палст значений от с большим количеством оценок будут упущены. Пользователь может прийти к выводу, что таких значений нет, что  окажется недействительным\n"
+            "Но, как видно, это приведёт к тому, что пласт значений с большим количеством оценок будут упущены. Пользователь может прийти к выводу, что таких значений нет, что  окажется недействительным\n"
           ]
         }
       ]
